style: consertando estilização